# tinyinfer

./: CMakeLists.txt
benchmark/: bench_graph_scheduler.cpp  bench_matmul.cpp
examples/: graph_demo.cpp  main.cpp  mlp.cpp  model.cpp  residual_demo.cpp
include/: debug.h  execution_context.h  execution_plan.h  graph.h  model_loader.h  module.h  operator_registry.h  ops.h  tensor.h  thread_pool.h
milestones/: 1.md  2.md
src/: execution_context.cpp  execution_plan.cpp  graph.cpp  model_loader.cpp  operator_registry.cpp  ops.cpp  tensor.cpp  thread_pool.cpp
tests/: test_ops.cpp
